--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linking-client",
-  "homepage": "https://polodev.github.io/react-g-link",
+  "homepage": "https://polodev.github.io/rglink",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
